apps/dssp-targetp-2/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-2
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-2
  template:
    metadata:
      labels:
        app: dssp-targetp-2
        backstage.io/kubernetes-id: dssp-targetp-2
        environment: prod
    spec:
      containers:
        - name: dssp-targetp-2
          image: chaitanyapandeygspann/dssp-targetp-2:1.0.1
          ports:
            - containerPort: 5000
