apps/dssp-targetp-2/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-2
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /dssp-targetp-2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-2
                port:
                  number: 80
